made scrollbar only gone on home, fixed back clipping and project info

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -23,6 +23,11 @@
     height: 100vh;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
+    scrollbar-width: none;
+}
+
+#home::-webkit-scrollbar {
+    display: none;
 }
 
 #home>section {
