--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,16 +2,11 @@
 * {
   margin: 0;
   padding: 0;
-  scrollbar-width: none;
   -ms-overflow-style: none;
 }
 
 a, a:visited, a:hover, a:active {
   color: white;
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
 
 body {
